# s2d2

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  environment.yml  next_steps.md  project_setup.md  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  cffconvert.yml  documentation.yml  sonarcloud.yml
deepening/: MTD_MSIL1C.md  MTD_TL.md
docs/: Makefile  acronyms.rst  conf.py  index.rst  make.bat  modules.rst
examples/: load_data.py
s2d2/: __init__.py  check_array.py  download_S2_L1C_sample.py  eo_imagery.py  handler_dat.py  handler_mgrs.py  handler_sentinel2.py  image_coordinate_tools.py  mapping_input.py  mapping_tools.py  naming_check.py  orbit_tools.py  read_sentinel2.py  sensor_readings_sentinel2.py  sentinel2_band.py  sentinel2_datastrip.py  sentinel2_grid.py  sentinel2_instrument.py  sentinel2_platform.py  sentinel2_product.py  sentinel2_tile.py  typing.py  unit_conversion.py  utils.py
s2d2/checking/: array.py  mapping.py  naming.py
s2d2/handler/: files.py  gml.py  mgrs.py  sentinel2.py  xml.py
tests/: test_my_module.py
tests/handler/: test_handler_mgrs.py
