# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Bas Altena
author_email = bas@space-accountants.eu
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
description = sentinel-2 data deepening
keywords =
    sentinel-2
    metadata
long_description = file: README.md
long_description_content_type = text/markdown
name = s2d2
project_urls =
    Bug Tracker = git@github.com:space-accountants/s2d2/issues
url = git@github.com:space-accountants/s2d2
version = 0.1.0

[tool:pytest]
testpaths = tests
addopts = --cov --cov-report xml --cov-report term --cov-report html

[options]
zip_safe = False
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    numpy
    pandas
    geopandas

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = s2d2, s2d2.*

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = s2d2
src_paths = s2d2,tests
line_length = 120
